# SteamAudioCSample

./: .gitmodules  AmbisonicsBinauralEffect.cpp  AmbisonicsBinauralEffect.hpp  AudioSource.cpp  AudioSource.hpp  BinauralEffect.cpp  BinauralEffect.hpp  BinauralRenderer.cpp  BinauralRenderer.hpp  CMakeLists.txt  Context.cpp  Context.hpp  ConvolutionEffect.cpp  ConvolutionEffect.hpp  DirectEffect.cpp  DirectEffect.hpp  Environment.cpp  Environment.hpp  EnvironmentalRenderer.cpp  EnvironmentalRenderer.hpp  Helpers.cpp  Helpers.hpp  README.md  Scene.cpp  Scene.hpp  SteamAudioDecoder.cpp  Structs.hpp  audioObject.hpp  common.h  main.cpp  steamAudioDecoder.hpp
